--- a/infra/compose.yaml
+++ b/infra/compose.yaml
@@ -1,7 +1,7 @@
 services:
   database:
     image: "postgres:16.0-alpine3.18"
-    ENV_FILE:
+    env_file:
       - ../.env.development
     ports:
       - "5432:5432"
