--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,7 @@
- POSTGRES_HOST=ep-round-smoke-aeq5s2nf.c-2.us-east-2.aws.neon.tech
+ POSTGRES_HOST=localhost
  POSTGRES_PORT=5432
- POSTGRES_USER=neondb_owner
- POSTGRES_DB=neondb
-POSTGRES_PASSWORD=npg_1KcJlTXYNRQ8
+ POSTGRES_USER=local_user
+ POSTGRES_DB=local_db
+POSTGRES_PASSWORD=local_password
+DATABASE_URL=postgress://local_user:local_password@localhost:5432/local_db
+#POSTGRESS_CA=""
